[package]
name = "dotfox"
version = "0.4.0"
edition = "2021"
homepage = "https://github.com/Lunarequest/dotfox/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.17.2"
gpgme = { version = "0.11.0", features = ["v1_18"] }
serde = { version = "1.0.164", features = ["derive"] }
sysinfo = "0.29.3"
serde_json = "1.0.99"
owo-colors = { version = "3.5.0", features = ["alloc", "supports-color", "supports-colors"] }
tabled = "0.12.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
